# productivity

./: .env  pyproject.toml  readme.md  requirements.txt
data/: test_data.xlsx
data/processed/: test_data.parquet
queries/: queries.txt
src/: __init__.py  cli.py  config.py  io_utils.py
src/llm/: __init__.py  batch_analyzer.py  config.py  data_analyzer.py  hello.py
ui/: streamlit_app.py  tkinter_app.py
